--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
-    /* box-shadow: 0px 0px 0px 1px red inset; */
+    box-shadow: 0px 0px 0px 1px red inset;
 }
 
 /* testa della pagina */
@@ -70,6 +70,14 @@ button:active {
 main {
     height: calc(100vh - 180px);
     background-color: #7fffd4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+main .card {
+    width: 680px;
+    height: 680px;
 }
 
 /* fondo della pagina */
