--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
-    box-shadow: 0px 0px 0px 1px red inset;
+    /* box-shadow: 0px 0px 0px 1px red inset; */
 }
 
 /* testa della pagina */
@@ -78,6 +78,22 @@ main {
 main .card {
     width: 680px;
     height: 680px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+main .square {
+    width: calc(100% / 10);
+    height: calc(100% / 10);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+    cursor: pointer;
+}
+
+main .square.lightblue {
+    background-color: lightskyblue;
 }
 
 /* fondo della pagina */
