--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,7 @@ main .square {
     align-items: center;
     border: 1px solid black;
     cursor: pointer;
+    color: #7fffd4;
 }
 
 main .square.lightblue {
