--- a/css/style.css
+++ b/css/style.css
@@ -82,15 +82,15 @@ button:active {
 /* corpo della pagina */
 main {
     height: calc(100vh - 180px);
+    padding: 50px 0;
     background-color: #7fffd4;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    overflow-y: auto;
 }
 
 main .card {
     width: 680px;
     height: 680px;
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
 }
